--- a/game2.html
+++ b/game2.html
@@ -23,7 +23,7 @@
                         <img id="rsp-you" src="./mystery.png" alt="Your choice">
                     </div>
                     <div id = "rsp-grid-middle">   
-                        <img id="vs" src="./VS.png" alt="Versus">
+                        <img id="vs" src="./vs.png" alt="Versus">
                     </div>
                     <div id = "rsp-grid-right">                    
                         <p class="player-names"> COM </p>
